# Broforce-trainer

./: .gitignore  Broforce.CT  CMakeLists.txt  Dojo NTR.CT  Makefile  README.md  build.bat  build_mono_module.bat  dllmain.lib  trainer_config.ini  trainer_log.txt
injector/: CMakeLists.txt  injector.cpp
mono_module/: README.md  mono_module.cpp  mono_module.h
src/: cheat.cpp  cheat.h  config.cpp  config.h  dllmain.cpp  gui.cpp  gui.h  hook.cpp  hook.h  memory.cpp  memory.h
